--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap": "^4.0.0-beta.3",
+        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.2.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12.6",
+        "popper.js": "^1.12.9",
         "vue": "^2.5.7"
     }
 }
