Adding read-only Vue-based Kanban board

--- a/app/routes.ini
+++ b/app/routes.ini
@@ -100,6 +100,14 @@ POST /taskboard/add = Controller\Taskboard->add
 POST /taskboard/edit/@id = Controller\Taskboard->edit
 POST /taskboard/saveManHours = Controller\Taskboard->saveManHours
 
+; Kanban Board
+GET /kanban/@group = Controller\Kanban->index
+GET /kanban/@group/@sprint = Controller\Kanban->index
+GET /kanban/boardLanes = Controller\Kanban->boardLanes
+GET /kanban/boardData = Controller\Kanban->boardData
+POST /kanban/add = Controller\Kanban->add
+POST /kanban/edit/@id = Controller\Kanban->edit
+
 ; Backlog
 GET /backlog = Controller\Backlog->index
 GET /backlog/old = Controller\Backlog->index_old
