Kanban board update
The Kanban board now supports dragging issues to update their status.
A future update will add persistent item sorting and user-selectable
group, sprint, and type visibility.

--- a/app/routes.ini
+++ b/app/routes.ini
@@ -105,8 +105,7 @@ GET /kanban/@group = Controller\Kanban->index
 GET /kanban/@group/@sprint = Controller\Kanban->index
 GET /kanban/boardLanes = Controller\Kanban->boardLanes
 GET /kanban/boardData = Controller\Kanban->boardData
-POST /kanban/add = Controller\Kanban->add
-POST /kanban/edit/@id = Controller\Kanban->edit
+POST /kanban/move/@id = Controller\Kanban->move
 
 ; Backlog
 GET /backlog = Controller\Backlog->index
