Support navigation to kanban board
This adds a Kanban button to sprints in the Backlog

I also optimized the Kanban backend to only load data needed to render
the kanban-issue components, rather than the entire issue_detail view.

--- a/app/routes.ini
+++ b/app/routes.ini
@@ -101,8 +101,7 @@ POST /taskboard/edit/@id = Controller\Taskboard->edit
 POST /taskboard/saveManHours = Controller\Taskboard->saveManHours
 
 ; Kanban Board
-GET /kanban/@group = Controller\Kanban->index
-GET /kanban/@group/@sprint = Controller\Kanban->index
+GET /kanban/@sprint/@group = Controller\Kanban->index
 GET /kanban/boardLanes = Controller\Kanban->boardLanes
 GET /kanban/boardData = Controller\Kanban->boardData
 POST /kanban/move/@id = Controller\Kanban->move
